--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -24,6 +24,45 @@ $font-family-body: helvetica, arial, sans serif;
   /*--fontSize: calc(100vw / 80);*/
 }
 
+//== COLOR
+$primary-color:              #2ae !default;    // aqua-ish?
+$secondary-color:            #562800 !default; // old text brown
+$another-primary-color:      #2C5491 !default; // close enough to the primary?
+
+$orange:                     #fd7e14 !default;
+$sepia:                      #230400 !default;
+
+$black:                      #000000 !default;
+$blue:                       #0d6efd !default;
+$indigo:                     #6610f2 !default;
+$purple:                     #4C2C92 !default;
+$pink:                       #d63384 !default;
+$red:                        #dc3545 !default;
+
+$yellow:                     #ffc107 !default;
+$green:                      #28a745 !default;
+$teal:                       #20c997 !default;
+$cyan:                       #17a2b8 !default;
+$white:                      #ffffff !default;
+$offwhite:                   #FFF4F4 !default;
+
+$grey:                       #494440;
+$grey-light:                 #E4E2E0;
+$grey-dark:                  #494440;
+
+$brand-color:                $primary-color;
+
+
+// FUNCTIONAL COLORS (WHERE STYLE MEETS SEMANTICS)
+$background-color:           $white;
+$text-color:                 $secondary-color;
+
+$color-link:                 $another-primary-color;
+$color-active:               $indigo;
+$color-hover:                $orange;
+$color-focus:                $cyan;
+$color-visited:              $purple;
+
 
 img.dead {
 -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
