--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,8 +3,22 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+<meta name="description" content="{{ description }}">
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:site" content="@{{ site.twitter_username }}">
+<meta name="twitter:creator" content="@{{ author }}/">
+<meta property="og:site_name" content="{{ site.title }}">
+<meta property="og:type" content="website" />
+<meta property="og:url" content="{{ site.url }}" />
+<meta property="og:title" content="{{ title }}" />
+<meta property="og:description" content="{{ description }}" />
+<meta property="og:image" content="{{ site.image_social | prepend: site.baseurl | prepend: site.url }}" />
+
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+
 <link href="https://fonts.googleapis.com/css?family=Playfair+Display:900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="{{ '/css/jdk20v1.css' | prepend: site.baseurl }}">
 
@@ -23,60 +37,32 @@
 <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/manifest.json">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
 <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | prepend: site.baseurl | prepend: site.url }}">
 
-<meta property="og:url" content="{{ site.url }}" />
-<meta property="og:title" content="{{ site.title }}" />
-<meta property="og:description" content="{{ site.description }}" />
-<meta property="og:image" content="{{ site.image_social }}" />
-<!-- 1200x 628-900 (linked image 628, fb image 900, highlighted image 717) 2.7:1 or 16:9 event -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="{{ site.title }}" />
-<meta property="twitter:description" content="{{ site.description }}" />
-<meta property="twitter:image" content="{{ site.image_social }}" />
-<!-- 1024 x 512 2:1/16:9 -->
 <script src="https://kit.fontawesome.com/3789fe5ab2.js" crossorigin="anonymous"></script>
 
+<title>{{ title }}</title>
 {% comment %}
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Pop-Up Magazine">
+    <link rel="icon" sizes="32x32" href="/images/icons/icon-32x32.png">
+    <link rel="icon" sizes="192x192" href="/images/icons/chrome-touch-icon-192x192.png">
 
-<!-- Facebook -->
-<meta property="og:url" content="https://www.popupmagazine.com/">
-<meta property="og:publisher" content="130813763754">
-<meta property="og:title" content="Pop-Up Magazine">
-<meta property="og:description" content="A live magazine, created for a stage, a screen, and a live audience.">
-<meta property="og:image" content="https://www.popupmagazine.com/images/social/card-winter2020.jpg">
+    <link rel="shortcut icon" sizes="16x16" href="/images/icons/favicon.ico">
+    <link rel="shortcut icon" sizes="32x32" href="/images/icons/icon-32x32.png">
 
-<!-- Twitter -->
-<meta name="twitter:card" content="photo">
-<meta name="twitter:site" content="@popupmag">
-<meta name="twitter:title" content="Pop-Up Magazine">
-<meta name="twitter:image" content="https://www.popupmagazine.com/images/social/card-winter2020.jpg">
-<meta name="twitter:url" content="https://www.popupmagazine.com/">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Pop-Up Magazine">
+    <link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png">
 
-<!-- Add to homescreen for Chrome on Android -->
-<meta name="mobile-web-app-capable" content="yes">
-<meta name="application-name" content="Pop-Up Magazine">
-<link rel="icon" sizes="32x32" href="/images/icons/icon-32x32.png">
-<link rel="icon" sizes="192x192" href="/images/icons/chrome-touch-icon-192x192.png">
+    <!-- Tile icon for Win8 (144x144 + tile color) -->
+    <meta name="msapplication-TileImage" content="/images/icons/ms-touch-icon-144x144-precomposed.png">
+    <meta name="msapplication-TileColor" content="#FFC900">
 
-<link rel="shortcut icon" sizes="16x16" href="/images/icons/favicon.ico">
-<link rel="shortcut icon" sizes="32x32" href="/images/icons/icon-32x32.png">
-
-<!-- Add to homescreen for Safari on iOS -->
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="apple-mobile-web-app-title" content="Pop-Up Magazine">
-<link rel="apple-touch-icon" href="/images/icons/apple-touch-icon.png">
-
-<!-- Tile icon for Win8 (144x144 + tile color) -->
-<meta name="msapplication-TileImage" content="/images/icons/ms-touch-icon-144x144-precomposed.png">
-<meta name="msapplication-TileColor" content="#FFC900">
-
-<!-- Color the status bar on Android -->
-<meta name="theme-color" content="#FFC900">
+    <!-- Color the status bar on Android -->
+    <meta name="theme-color" content="#FFC900">
 {% endcomment %}
-
 </head>
