--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,3 +1,8 @@
+---
+---
+{% assign title = page.title | default: site.title | escape %}
+{% assign description = page.excerpt | default: site.description | strip_html | strip_newlines | truncate: 160 %}
+{% assign author = page.author | default: site.twitter_authorname | escape %}
 <!DOCTYPE html>
 <html lang="en">
 {% include head.html %}
