--- a/css/jdk20v1.scss
+++ b/css/jdk20v1.scss
@@ -5,7 +5,6 @@
 ---
 
 @charset "utf-8";
-
 // type
 
 $font-family-statement: 'Playfair Display', serif !default;
@@ -14,14 +13,10 @@ $font-family-body: helvetica, arial, sans serif;
 :root {
   /*
   Font size is the basis of all other measurements.
-  It's either constant or viewport-relative. Choose one.
-
-  Constant: */
+  It's either constant or viewport-relative. */
   --fontSize: 16px;
-  /*
-
-  Viewport-relative (100% / EMs-across-viewport) */
-  /*--fontSize: calc(100vw / 80);*/
+  /*  Viewport-relative (100% / EMs-across-viewport) */
+  /*  --fontSize: calc(100vw / 80);*/
 }
 
 //== COLOR
